最新版ファイルの追加

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,11 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <title>ロボ・スタディ株式会社</title>
+  <meta charset="UTF-8" />
+  <title>AIみまくんトップ</title>
 </head>
 <body>
-    <h1>ロボ・スタディ株式会社へようこそ</h1>
-    <p><a href="/chatbot">▶ みまくん Chatbot を開く</a></p>
+  <h2>AIみまくん チャットボット</h2>
+  <iframe src="/chatbot" width="100%" height="600" style="border:none;"></iframe>
 </body>
 </html>
